<resources>
    <string name="alphabet_accept">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="alphabet_accept_number">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM1234567890</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="under_development">Under Development</string>
    <string name="permission_from_device">Permission from device</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="no_net_connection">No Internet Connection</string>
    <string name="empty_string" />
    <string name="txt_join_the_green">Join The Green Team</string>
    <string name="txt_volt_exclusively_for_drivers">Volt is exclusively for drivers with fully electric vehicles.</string>
    <string name="txt_available_everywhere">Available Everywhere</string>
    <string name="txt_set_your_own_hours_area">Set your own hours and areas where you would like to drive.</string>
    <string name="txt_highest_earnings">Highest Earnings</string>
    <string name="txt_earn_100_of_fare">Earn 100% of the passenger fare. Pay a small flat fee per trip.</string>
    <string name="txt_turn_on_location">Turn on location services in your device settings</string>
    <string name="txt_next">Next</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_app_name">Smart Driver</string>
    <string name="txt_clear_air_ride">Clean Air Ride share</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_have_an_account">Don’t have an account? <font color='#1b1c3c'>Sign up</font></string>
    <string name="txt_welcome_back">Welcome Back</string>
    <string name="txt_create_account">Create An Account</string>
    <string name="txt_thanks_for_going_green">Thanks for going green!</string>
    <string name="txt_enter_email_phone">Enter your email/phone to receive a verification code.</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_email_address">Email Address</string>
    <string name="txt_admin_gmail_com">admin@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">* * * * * * * *</string>
    <string name="txt_remember_me">Remember Me</string>
    <string name="txt_via_phone"><u>Via Phone</u></string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_connect_with_facebook">Connect with Facebook</string>
    <string name="txt_connect_with_google">Connect with Google</string>
    <string name="txt_forgot_password_one">Forgot Password</string>
    <string name="txt_how_to_reset_your_password">Enter your email and we’ll send you instructions on how to reset your password.</string>
    <string name="txt_enter_your_email_address">Enter your email address</string>
    <string name="txt_new_password">New Password</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="txt_check_your_email">Check Your Email</string>
    <string name="txt_check_mail_desc">We’ve sent instructions on how to reset your password (also check the spam folder).</string>
    <string name="txt_reset_password_detail">Enter a new password to access account.</string>
    <string name="txt_re_enter_password">Re-enter Password</string>
    <string name="txt_update_password">Update Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faq">FAQ</string>
    <string name="unblock_account">Unblock account</string>
    <string name="praesent_ornare_velit_mi_at_auctor_justo_facilisis_sed_proin_placerat_leo_in_aliquam_vulputate_dolor_ipsum_ultricies_lorem_ac_ornare_elit_turpis_eu_purus_nulla_sodales_orci_ut_enim_lacinia">Praesent ornare velit mi, at auctor justo facilisis sed. Proin placerat, leo in aliquam vulputate, dolor ipsum ultricies lorem, ac ornare elit turpis eu purus. Nulla sodales orci ut enim lacinia.</string>
    <string name="notifications">Notifications</string>
    <string name="your_booking_confirmed">Your booking confirmed</string>
    <string name="lorem_ipsum_dolor_sit_amet_simply_dummy_text">Lorem ipsum dolor sit amet simply dummy text</string>
    <string name="_9_nov">9 Nov</string>
    <string name="patrick_cook">Patrick Cook</string>
    <string name="_4_8">4.8</string>
    <string name="change_password">Change Password</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="about_app">About Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want\n to log out ?</string>
    <string name="are_you_sure_you_want_to_delete_account">Are you sure you want\n to delete account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="how_was_your_ride_with">How was your ride with</string>
    <string name="driver">Driver</string>
    <string name="good">Good</string>
    <string name="share_feedback_with_driver">Share feedback with driver.</string>
    <string name="submit">Submit</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_create_your_profile">Create Your Profile</string>
    <string name="txt_upload_photo">Upload Photo</string>
    <string name="txt_account_details">Account Details</string>
    <string name="txt_first_name">First name</string>
    <string name="txt_enter_your_first_name">Enter your first name</string>
    <string name="txt_last_name">Last name</string>
    <string name="txt_enter_your_last_name">Enter your last name</string>
    <string name="txt_username">Username</string>
    <string name="txt_enter_your_username">Enter your username</string>
    <string name="txt_enter_your_email">Enter your email address</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_enter_your_number">Enter your number</string>
    <string name="txt_emergency_phone_number_optional">Emergency Phone Number (Optional)</string>
    <string name="txt_street_name">Street Name</string>
    <string name="txt_enter_street_name">Enter street name</string>
    <string name="txt_personal_details">Personal details</string>
    <string name="txt_location">Location</string>
    <string name="txt_enter_location">Enter location</string>
    <string name="txt_pincode_zipcode_optional">Pincode/Zipcode (Optional)</string>
    <string name="txt_enter_pincode_zipcode">Enter Pincode/Zipcode</string>
    <string name="txt_welcome">Welcome</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_trips">Trips</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="trip_history">Trip History</string>
    <string name="completed">Completed</string>
    <string name="_8_june_2019_18_39">8 June 2019, 18:39</string>
    <string name="_11_24">11:24</string>
    <string name="_1_thrale_street_london_se19hw_uk">1, Thrale Street, London, SE19HW, UK</string>
    <string name="_18_ocean_avenue_london_se19hw_uk">18, Ocean avenue, London, SE19HW, UK</string>
    <string name="please_enter_the_4_digit_code">Please enter the 4 digit code</string>
    <string name="verification">Verification</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
    <string name="sent_to">sent to</string>
    <string name="verify">Verify</string>
    <string name="resend_it">Resend</string>
    <string name="txt_where_to">Where to?</string>
    <string name="txt_now">Now</string>
    <string name="txt_near_you">Near you</string>
    <string name="please_txt_select_a_date_and_time_for_booking">Please select a date and time for booking</string>
    <string name="txt_select_date">select date</string>
    <string name="txt_dummy_date">Thu, 15 12</string>
    <string name="txt_dummy_time">13:00 PM</string>
    <string name="txt_select_time">select time</string>
    <string name="txt_pick_up">PICK UP</string>
    <string name="txt_springwood">Spring wood</string>
    <string name="txt_drop_off">DROP OFF</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_clare_road">Clare Road</string>
    <string name="txt_bridge">Bridge Farm</string>
    <string name="txt_church">St Michael\'s Church</string>
    <string name="txt_tennis">Tennis Court</string>
    <string name="txt_select_type">Select Type</string>
    <string name="txt_suv">SUV</string>
    <string name="txt_sedan">Sedan</string>
    <string name="txt_economy">Economy</string>
    <string name="txt_time">3 min</string>
    <string name="txt_count">4</string>
    <string name="txt_get_comfy">get comfy, economical cars</string>
    <string name="txt_actual_price">23 $</string>
    <string name="txt_price">58.27 $</string>
    <string name="txt_customer_details">Customer Details</string>
    <string name="txt__20_43">$ 20.43</string>
    <string name="txt_customer_name">CUSTOMER NAME</string>
    <string name="txt_contact_details">Contact Details</string>
    <string name="txt_gurman_kanda">Gurman Kanda</string>
    <string name="txt_1234567890">1234567890</string>
    <string name="txt_notes">Notes</string>
    <string name="txt_add_new_card">Add new card</string>
    <string name="txt_apply_promo_code">Apply Promo Code</string>
    <string name="txt_1234">**** **** **** 1234</string>
    <string name="ride_completed">Ride Completed</string>
    <string name="how_was_your_trip_with_patrick">How was your trip with Patrick</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="driver_details">Driver Details</string>
    <string name="txt_riya">Riya</string>
    <string name="txt_start_typing">start typing</string>
    <string name="txt_hey_there_how_are_you">Hey there, How are you????</string>
    <string name="txt_okay_give_me_some_tine">Okay give me some time to Check the details.</string>
    <string name="txt_great_thank_you">Great. Thank you!</string>
    <string name="txt_connecting_you_to_a_driver">Connecting you to a driver</string>
    <string name="txt_slide_to_cancel">Slide to cancel</string>
    <string name="txt_slide_to_cancel_trip">Slide to cancel Trip</string>
    <string name="txt_hs785k">HS785K</string>
    <string name="txt_volkswagen_polo">Volkswagen Polo</string>
    <string name="txt_2664_royal_ln_mesa_newjersey">2664 Royal Ln, Mesa, NewJersey</string>
    <string name="txt_time_title">TIME</string>
    <string name="txt_price_title">PRICE</string>
    <string name="txt_distance">DISTANCE</string>
    <string name="txt_2_miles">2 miles</string>
    <string name="txt_driver_arrived">Your driver has arrived.\nPlease begin trip within 5 minutes.</string>
    <string name="txt_ride_in_progress">Your ride is in progress.</string>
    <string name="txt_meet_at_pickup_location">Meet at pickup location</string>
    <string name="txt_your_volt_has_arrived">Your Volt has arrived.</string>
    <string name="txt_volt_ride_initiated">Volt ride initiated.</string>
    <string name="txt_send">Send</string>
    <string name="hs785k">HS785K</string>
    <string name="volkswagen">Volkswagen</string>
    <string name="payment_summary">Payment summary</string>
    <string name="payment_cash">Payment Cash</string>
    <string name="_21_99">$0.00</string>
    <string name="sub_total">Sub Total</string>
    <string name="new_password">New Password</string>
    <string name="wallet">Wallet</string>
    <string name="menu_account">Account</string>
    <string name="menu_earnings">Earnings</string>
    <string name="menu_bookings">Bookings</string>
    <string name="john_doe">John Doe</string>
    <string name="_740136">#740136</string>
    <string name="received">Received</string>
    <string name="old_password">Old Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
</resources>