<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.feedback.FeedbackFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivClose"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        app:srcCompat="@drawable/baseline_close_24"
        android:layout_marginTop="12dp"
        app:tint="@color/grey_text_color"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:text="@string/how_was_your_ride_with"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/ivClose"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="24sp"
        app:fontFamily="@font/poppins_regular"

        />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDriverName"
        android:text="@string/driver"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:gravity="center"
        android:textSize="24sp"
        app:fontFamily="@font/poppins_bold"

        />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvRating"
        android:text="@string/good"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDriverName"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        app:fontFamily="@font/poppins_regular"

        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/tvRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:rating="3"
        android:stepSize="1"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/share_feedback_with_driver"
        android:fontFamily="@font/poppins_regular"
        android:maxLength="250"
        android:maxLines="6"
        android:textSize="15sp"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/submit"
        android:layout_marginTop="60dp"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/etFeedback" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/shape_round_button"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/txt_skip"
        android:textColor="@color/text_color"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubmit" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>