<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivCustomerImage"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/john_doe"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/ivCustomerImage"
        app:layout_constraintTop_toTopOf="@+id/ivCustomerImage" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRideNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/_740136"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivCustomerImage"
        app:layout_constraintTop_toBottomOf="@+id/tvCustomerName" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/stroke_light"
        app:layout_constraintTop_toBottomOf="@+id/ivCustomerImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTransactionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/received"
        android:textColor="@color/theme"
        android:textSize="12sp"
        app:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivCustomerImage" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/_21_99"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTransactionStatus" />


</androidx.constraintlayout.widget.ConstraintLayout>