<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBackground"
        android:padding="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_rounded_where_to">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/noDriverFound"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="@dimen/_10sdp"
            android:background="@color/black"
            android:visibility="gone"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:alpha="0.5" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_tesla_car"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivCar"
            app:layout_constraintEnd_toStartOf="@+id/tvActualPrice"
            android:layout_marginStart="12dp"
            android:text="@string/txt_suv"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black_text_color" />

        <TextView
            android:id="@+id/tvActualPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/_80sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivCar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:text="@string/txt_actual_price"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black_text_color" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            android:text="@string/txt_time"
            android:textSize="13sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/grey_text_color" />

        <TextView
            android:id="@+id/tvPersonCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toEndOf="@id/tvTime"
            android:text="@string/txt_count"
            android:gravity="bottom"
            android:textSize="11sp"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="15dp"
            android:drawablePadding="5dp"
            android:textColor="@color/grey_text_color"
            app:drawableStartCompat="@drawable/ic_person" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="@id/tvActualPrice"
            app:layout_constraintHorizontal_bias="1"
            android:text="@string/txt_price"
            android:visibility="invisible"
            android:textSize="12sp"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="6dp"
            android:textColor="@color/grey_text_color" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvTime"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_get_comfy"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="11sp"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="6dp"
            android:textColor="@color/grey_text_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>