<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.ChangePasswordActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_button" />


        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/change_password"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/ivBack"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etOldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/old_password"
            android:inputType="textVisiblePassword"
            android:maxLength="30"
            android:paddingTop="12dp"
            android:paddingBottom="22dp"
            android:singleLine="true"
            android:textColorHint="@color/border_color_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvWelcome"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:drawablePadding="10dp"
            android:hint="@string/new_password"
            android:inputType="textWebPassword"
            android:maxLength="30"
            android:paddingTop="12dp"
            android:paddingBottom="22dp"
            android:singleLine="true"
            android:textColorHint="@color/border_color_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/etOldPassword"
            app:layout_constraintTop_toBottomOf="@id/etOldPassword" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCnfPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:drawablePadding="10dp"
            android:hint="@string/re_enter_password"
            android:inputType="textWebPassword"
            android:maxLength="30"
            android:paddingTop="12dp"
            android:paddingBottom="22dp"
            android:singleLine="true"
            android:textColorHint="@color/border_color_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/etNewPassword"
            app:layout_constraintTop_toBottomOf="@id/etNewPassword" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUpdateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_theme_shape_round_button"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/txt_update_password"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/etCnfPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>